# filament-app-template

./: .gitignore  CMakeLists.txt  README.md
assets/materials/: bakedColor.mat
include/filagui/: ImGuiHelper.h
include/filamentapp/: Config.h
src/: main.cpp
src/app/: main.cpp
src/filamentapp/: EasyApp.cpp  FilamentApp.cpp  MeshAssimp.cpp
